# HyperPong

./: .gitignore  CMakeLists.txt  README.md
dependencies/Glad/: CMakeLists.txt
dependencies/Glad/include/glad/: glad.h
dependencies/Glad/src/: glad.c
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  playerBar.cpp  playerBar.h  projectile.cpp  projectile.h
src/OpenGL/: keys.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/Utils/: logger.cpp  logger.h  matrix.cpp  matrix.h
src/res/shaders/: background.frag  blackHole.frag  colorFill.frag  whiteFill.frag
